# crate-template

./: README.md  main.py  test.py
.github/workflows/: run_template.yml
template/: Cargo.toml  README.md
templates/none/: Cargo.toml  Commands.toml  README.md  build.rs
templates/none/.github/workflows/: test.yml
templates/none/book/: book.toml
templates/none/book/src/: getting_started.md
templates/none/examples/: simple.rs
templates/none/src/: main.rs
templates/tauri/: Cargo.toml  README.md  tauri.conf.json
templates/tauri/.github/workflows/: test.yml
templates/tauri/book/src/: SUMMARY.md
templates/tauri/examples/: simple.rs
templates/tauri/src/: lib.rs  main.rs
