[package]
name = "${{NAME}}"
version = "0.1.0"
edition = "2021"
rust-version = "1.61"
description = "A Tauri App"
authors = ["${{OWNER}}"]
license = ""
repository = ""
default-run = "${{NAME}}"
[workspace]

[build-dependencies]
tauri-build = { version = "1.0" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
